--- a/MySpace/src/app/pages/article/article.component.scss
+++ b/MySpace/src/app/pages/article/article.component.scss
@@ -10,7 +10,7 @@
     margin: 20px auto;
     display: block;
     position: relative;
-    padding-bottom: 100px;
+    padding-bottom: 150px;
   }
 
   .metadata {
@@ -32,7 +32,6 @@
   }
 
   .description {
-    //font-size: medium;
     font-weight: 500;
   }
 
